--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "papaparse": "^5.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.1.0",
