--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.1.0",
+    "scheduler": "0.23.0",
     "schema-utils": "^4.3.2",
     "terser-webpack-plugin": "^5.3.14",
     "typescript": "^4.9.5",
