--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ajv-keywords": "^3.5.2",
     "axios": "^1.10.0",
     "debug": "4.3.4",
+    "eventemitter3": "5.0.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
