--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.52.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -12,13 +14,22 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
+    "@types/react-dom": "^18.3.7",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "core-js-pure": "^3.44.0",
+    "cors": "^2.8.5",
     "debug": "4.3.4",
+    "decimal.js-light": "^2.5.1",
+    "dotenv": "^17.2.0",
+    "es-toolkit": "^1.39.7",
     "eventemitter3": "4.0.7",
+    "express": "^5.1.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
+    "multer": "^2.0.2",
     "papaparse": "^5.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,19 +37,24 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.1.0",
+    "reselect": "^5.1.1",
     "scheduler": "0.23.0",
     "schema-utils": "^4.3.2",
     "terser-webpack-plugin": "^5.3.14",
     "typescript": "^4.9.5",
+    "use-sync-external-store": "^1.5.0",
+    "victory-vendor": "^37.3.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "scripts": {
+    "build:css": "npx tailwindcss -i ./src/index.css -o ./src/tailwind.output.css --minify",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:backend": "cd server && npm install && npm start"
   },
   "eslintConfig": {
     "extends": [
@@ -59,9 +75,14 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^10.0.0",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.21",
+    "react-refresh": "^0.17.0",
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.100.2",
+    "webpack-dev-server": "^5.2.2"
   }
 }
